--- a/bertolingo.ipynb
+++ b/bertolingo.ipynb
@@ -297,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "hJUWOMB5B25o"
       },
@@ -305,7 +305,8 @@
       "source": [
         "vocab_size = len(stoi)\n",
         "d_embd = 128\n",
-        "context_window = 128"
+        "context_window = 128\n",
+        "head_size = 128"
       ]
     },
     {
@@ -431,7 +432,7 @@
         "    self.embd = nn.Embedding(n_tokens, d_embd)\n",
         "\n",
         "  def forward(self, x):\n",
-        "    _, T, _ = x.shape\n",
+        "    T = x.shape[1]\n",
         "    pos = torch.arange(T, device=x.device)\n",
         "    return self.embd(pos)"
       ]
@@ -501,14 +502,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "tok_emb = TokenEmbedding(vocab_size, d_embd)\n",
+        "tok_emb = TokenEmbedding(vocab_size, d_embd, padding_idx=stoi['<PAD>'])\n",
         "pos_emb = PositionalEmbedding(context_window, d_embd)\n",
         "\n",
-        "final_emb = tok_emb(x_t_s) + pos_emb(x_t_s)\n",
+        "token_emb = tok_emb(x_t_s)  # (B,T) -> (B, T, d_embd)\n",
+        "pos_emb_out = pos_emb(x_t_s)  # (B,T) -> (B, T, d_embd) \n",
+        "final_emb = token_emb + pos_emb_out  # Add token + positional embeddings: (B, T, d_embd)\n",
         "\n",
-        "print(tok_emb(x_t_s).shape)\n",
-        "print(pos_emb(x_t_s).shape)\n",
-        "print(final_emb.shape)"
+        "print(\"Token embeddings shape:\", token_emb.shape)\n",
+        "print(\"Positional embeddings shape:\", pos_emb_out.shape)\n",
+        "print(\"Final embeddings shape:\", final_emb.shape)"
       ]
     },
     {
@@ -517,21 +520,11 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "encoder_key_padding_mask = (x_t_s == stoi['<PAD>'])\n",
-        "decoder_key_padding_mask = (x_t_s == stoi['<PAD>'])\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "s_a = Head(d_embd, d_embd)\n",
-        "c_a = Head(d_embd, d_embd, key_padding_mask=(x_t_s == stoi['<PAD>']), causal_mask=False)\n",
+        "encoder_key_padding_mask = (x_t_s == stoi['<PAD>'])  # Mask for encoder (English source)\n",
+        "decoder_key_padding_mask = (y_t_s == stoi['<PAD>'])  # Mask for decoder (Italian target)\n",
         "\n",
-        "print(s_a(final_emb).shape)\n",
-        "print(c_a(final_emb, src=x_t_s).shape)\n"
+        "print(\"Encoder padding mask shape:\", encoder_key_padding_mask.shape)\n",
+        "print(\"Decoder padding mask shape:\", decoder_key_padding_mask.shape)\n"
       ]
     },
     {
@@ -540,16 +533,15 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n"
+        "s_a = Head(d_embd, head_size)\n",
+        "c_a = Head(d_embd, head_size)\n",
+        "\n",
+        "# For cross-attention, we need encoder output (not raw tokens!)\n",
+        "# In real model: encoder_output would come from encoder layers\n",
+        "encoder_out = final_emb  # For now, use embeddings as encoder output\n",
+        "\n",
+        "print(\"Self-attention output shape:\", s_a(final_emb).shape)\n",
+        "print(\"Cross-attention output shape:\", c_a(final_emb, src=encoder_out).shape)\n"
       ]
     },
     {
